--- a/src/index.less
+++ b/src/index.less
@@ -8,6 +8,12 @@
 @import "solarized-dark-syntax/styles/languages/_base";
 @import "solarized-dark-syntax/styles/languages/javascript";
 
+@import "input";
+
+body {
+  margin: 0;
+}
+
 pre {
   display: block;
   padding: 9.5px;
@@ -15,12 +21,11 @@ pre {
   line-height: 1.42857143;
   word-break: break-all;
   word-wrap: break-word;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  border: 0;
 }
 
 .editor {
-  margin: 20px 0;
+  margin: 0 0;
 }
 
 .editor-colors {
