--- a/src/index.pug
+++ b/src/index.pug
@@ -2,7 +2,8 @@ doctype html
 html(lang='en')
   head
     title JavaScript Exercises
-    script(src='main.min.js')
+    script(src='main.min.js', async)
     link(rel='stylesheet', href='atom-dark-syntax.css')
   body
     #mydiv
+    input.console-input(type='text')
