--- a/src/index.pug
+++ b/src/index.pug
@@ -3,7 +3,7 @@ html(lang='en')
   head
     title JavaScript Exercises
     script(src='main.min.js', async)
-    link(rel='stylesheet', href='atom-dark-syntax.css')
+    link(rel='stylesheet', href='main.min.css')
   body
     #mydiv
     input.console-input(type='text')
