--- a/src/index.pug
+++ b/src/index.pug
@@ -6,4 +6,5 @@ html(lang='en')
     link(rel='stylesheet', href='main.min.css')
   body
     #mydiv
-    input.console-input(type='text')
+    input.console-input(type='text', autofocus)
+    button(type='button', onclick='alert("Not working")') Go to quiz
