Separate build & dev

--- a/src/layout.pug
+++ b/src/layout.pug
@@ -2,8 +2,9 @@ doctype html
 html(lang='en')
   head
     title JavaScript Exercises
-    script(src='main.min.js', async)
-    link(rel='stylesheet', href='main.min.css')
+    block scripts
+      script(src='main.js', async)
+      link(rel='stylesheet', href='main.css')
   body
     #mydiv
     input.console-input(type='text', autofocus)
