--- a/src/main.less
+++ b/src/main.less
@@ -1,12 +1,12 @@
-@import "solarized-dark-syntax/styles/colors";
-@import "solarized-dark-syntax/styles/syntax-variables";
+@import "../solarized-dark-syntax/styles/colors";
+@import "../solarized-dark-syntax/styles/syntax-variables";
 
 // Editor
-@import "solarized-dark-syntax/styles/editor";
+@import "../solarized-dark-syntax/styles/editor";
 
 // Languages
-@import "solarized-dark-syntax/styles/languages/_base";
-@import "solarized-dark-syntax/styles/languages/javascript";
+@import "../solarized-dark-syntax/styles/languages/_base";
+@import "../solarized-dark-syntax/styles/languages/javascript";
 
 @import "input";
 
