make production build

--- a/src/index-prod.pug
+++ b/src/index-prod.pug
@@ -1,5 +1,6 @@
 extends layout.pug
 
 block scripts
-  script(src='main.min.js', async)
+  script(src='exercises.js')
+  script(src='showRandomQuiz.min.js')
   link(rel='stylesheet', href='main.min.css')
