Add manifest file

--- a/src/layout.pug
+++ b/src/layout.pug
@@ -1,13 +1,17 @@
 doctype html
 html(lang='en')
   head
+    meta(charset='utf-8')
     title JavaScript Exercises
-    block scripts
-      script(src='exercises.js')
-      script(src='showRandomQuiz.js')
+    meta(name='viewport' content='width=device-width, initial-scale=1.0')
+    link(rel='manifest' href='manifest.json')
+    block stylesheets
       link(rel='stylesheet', href='main.css')
   body
     pre
       code#code
     input.console-input(type='text', autofocus)
     button(type='button', onclick='showRandomQuiz()') Go to quiz
+    block scripts
+      script(src='exercises.js' async)
+      script(src='showRandomQuiz.js' async)
