--- a/src/index-prod.pug
+++ b/src/index-prod.pug
@@ -1,6 +1,8 @@
 extends layout.pug
 
-block scripts
-  script(src='exercises.js')
-  script(src='showRandomQuiz.min.js')
+block stylesheets
   link(rel='stylesheet', href='main.min.css')
+
+block scripts
+  script(src='exercises.js' async)
+  script(src='showRandomQuiz.min.js' async)
