--- a/src/main.less
+++ b/src/main.less
@@ -1,14 +1,7 @@
-@import "../solarized-dark-syntax/styles/colors";
-@import "../solarized-dark-syntax/styles/syntax-variables";
-
-// Editor
-@import "../solarized-dark-syntax/styles/editor";
-
-// Languages
-@import "../solarized-dark-syntax/styles/languages/_base";
-@import "../solarized-dark-syntax/styles/languages/javascript";
-
+//@import "grid";
+//@import "buttons";
 @import "input";
+//@import "header";
 
 body {
   margin: 0;
@@ -31,4 +24,8 @@ pre {
 .editor-colors {
   background-color: #002b36;
   color: #839496;
+}
+
+.btn_cursor {
+  cursor: pointer;
 }
