--- a/src/index-prod.pug
+++ b/src/index-prod.pug
@@ -1,6 +1,7 @@
 extends layout.pug
 
 block stylesheets
+  link(rel='stylesheet', href='bootstrap.min.css')
   link(rel='stylesheet', href='main.min.css')
 
 block scripts
