fix highlighting problem

--- a/src/index-prod.pug
+++ b/src/index-prod.pug
@@ -2,8 +2,11 @@ extends layout.pug
 
 block stylesheets
   link(rel='stylesheet', href='bootstrap.min.css')
+  link(rel='stylesheet', href='prism.css')
+  link(rel='stylesheet', href='prism-solarizedlight.css')
   link(rel='stylesheet', href='main.min.css')
 
 block scripts
   script(src='exercises.js' async)
+  script(src='prism.js' async)
   script(src='showRandomQuiz.min.js' async)
