development build works

--- a/src/index-prod.pug
+++ b/src/index-prod.pug
@@ -8,5 +8,4 @@ block stylesheets
 
 block scripts
   script(src='exercises.js' async)
-  script(src='prism.js' async)
-  script(src='showRandomQuiz.min.js' async)
+  script(src='bundle.js' async)
