--- a/src/layout.pug
+++ b/src/layout.pug
@@ -26,11 +26,9 @@ html(lang='en')
           form
             .form-group
               label(for='console-output') Web Console Output:
-              textarea#console-output.form-control.console-output(rows='1', onchange='addRow();' autofocus)
-          button.btn.btn-info.btn_cursor(type='button', onclick='showRandomQuiz(); Prism.highlightAll();') Answer
-          button.btn.btn-info.btn_cursor(type='button', onclick='showRandomQuiz(); Prism.highlightAll();') Next quiz
+              textarea#console-output.form-control.console-output(rows='1', autofocus)
+          button#answer.btn.btn-info.btn_cursor(type='button') Answer
+          button#next-quiz.btn.btn-info.btn_cursor(type='button') Next quiz
     block scripts
       script(src='exercises.js' async)
-      script(src='prism.js' async)
-      script(src='showRandomQuiz.js' async)
-      script(src='textAreaAddRow.js' async)
+      script(src='bundle.js' async)
