fix build errors

--- a/src/index-prod.pug
+++ b/src/index-prod.pug
@@ -2,9 +2,7 @@ extends layout.pug
 
 block stylesheets
   link(rel='stylesheet', href='bootstrap.min.css')
-  link(rel='stylesheet', href='prism.css')
-  link(rel='stylesheet', href='prism-solarizedlight.css')
   link(rel='stylesheet', href='main.min.css')
 
 block scripts
-  script(src='bundle.js' async)
+  script(src='bundle.min.js' async)
