--- a/src/main.less
+++ b/src/main.less
@@ -1,3 +1,6 @@
+@import "../node_modules/prismjs/themes/prism.css";
+@import "../node_modules/prismjs/themes/prism-solarizedlight.css";
+
 //@import "grid";
 //@import "buttons";
 @import "input";
