--- a/src/main.less
+++ b/src/main.less
@@ -1,5 +1,5 @@
-@import "../node_modules/prismjs/themes/prism.css";
-@import "../node_modules/prismjs/themes/prism-solarizedlight.css";
+@import (less) "../node_modules/prismjs/themes/prism.css";
+@import (less) "../node_modules/prismjs/themes/prism-solarizedlight.css";
 
 //@import "grid";
 //@import "buttons";
