--- a/src/main.less
+++ b/src/main.less
@@ -1,6 +1,8 @@
 @import (less) "../node_modules/prismjs/themes/prism.css";
 @import (less) "../node_modules/prismjs/themes/prism-solarizedlight.css";
 
+@import "prism-solarized-light-extention.less";
+
 //@import "grid";
 //@import "buttons";
 @import "input";
