--- a/src/layout.pug
+++ b/src/layout.pug
@@ -9,23 +9,24 @@ html(lang='en')
       link(rel='stylesheet', href='bootstrap.css')
       link(rel='stylesheet', href='main.css')
   body
-    header
-      nav.navbar.navbar-dark.bg-dark
-        .container
-          .row
-            .col-12
-              a.navbar-brand(href='#')
-                | JavaScript Quiz
+    header.bg-dark
+      .container
+        nav.navbar.navbar-dark.navbar_no-padding
+          a.navbar-brand(href='#') JavaScript Quiz
+          .progress(style='height: 2px')
+            .progress-bar.bg-info(style='width: 50%')
     main.container
       .row
-        .col-12
-          pre
+        .col-12.bg-solarized
+          pre.language_custom
             code#code.language-javascript
+        .col-12
           form
             .form-group
               label(for='console-output') Web Console Output:
               textarea#console-output.form-control.console-output(rows='1', autofocus)
-          button#answer.btn.btn-info.btn_cursor(type='button') Answer
-          button#next-quiz.btn.btn-info.btn_cursor(type='button') Next quiz
+            .btn-group
+              button#answer.btn.btn-info.btn_cursor(type='button') Answer
+              button#next-quiz.btn.btn-light.btn_cursor(type='button') Next quiz
     block scripts
       script(src='bundle.js' async)
