coll mobile & desktop view

--- a/src/layout.pug
+++ b/src/layout.pug
@@ -13,8 +13,9 @@ html(lang='en')
       .container
         nav.navbar.navbar-dark.navbar_no-padding
           a.navbar-brand(href='#') JavaScript Quiz
-          .progress(style='height: 2px')
-            .progress-bar.bg-info(style='width: 50%')
+      .progress(style='height: 5px')
+        .progress-bar.bg-success(style='width: 50%')
+        .progress-bar.bg-danger(style='width: 40%')
     main.container
       .row
         .col-12.bg-solarized
