--- a/src/prism-solarized-light-extention.less
+++ b/src/prism-solarized-light-extention.less
@@ -4,10 +4,22 @@
 }
 
 pre.language_custom {
-  padding-left: 0;
-  padding-right: 0;
+  margin-top: 0;
+  padding-top: 1.5em;
 }
 
-.bg-solarized {
-  background-color: #fdf6e3;
+@media (max-width : 480px) {
+  pre.language_custom {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .bg-solarized {
+    background-color: #fdf6e3;
+  }
+
+  .container_no-padding {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
