--- a/src/layout.pug
+++ b/src/layout.pug
@@ -18,7 +18,8 @@ html(lang='en')
         #progress-failure.progress-bar.bg-danger(style='width: 0%')
     main.container
       .row#first-screen
-        button#start.mx-auto.btn.btn-lg.btn-info.btn_start(type='button') Start Quiz
+        button#exam.mx-auto.btn.btn-lg.btn-info.btn_start(type='button') Exam
+        button#train.mx-auto.btn.btn-lg.btn-info.btn_start(type='button') Train
       .row#quiz-screen.d-none
         .col-12.bg-solarized
           pre.language_custom
