modify service worker

--- a/src/index-prod.pug
+++ b/src/index-prod.pug
@@ -5,4 +5,4 @@ block stylesheets
   link(rel='stylesheet', href='main.min.css')
 
 block scripts
-  script(src='bundle.min.js' async)
+  script(src='app.min.js' async)
