--- a/src/layout.pug
+++ b/src/layout.pug
@@ -36,4 +36,4 @@ html(lang='en')
               button#answer.btn.btn-info.btn_cursor(type='button') Answer
               button#next-quiz.btn.btn-light.btn_cursor(type='button') Next quiz
     block scripts
-      script(src='bundle.js' async)
+      script(src='app.bundle.js' async)
