add theme color

--- a/src/layout.pug
+++ b/src/layout.pug
@@ -5,6 +5,7 @@ html(lang='en')
     title JavaScript Quiz
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     link(rel='manifest' href='manifest.json')
+    meta(name='theme-color' content="#343a40")
     block stylesheets
       link(rel='stylesheet', href='bootstrap.css')
       link(rel='stylesheet', href='main.css')
