--- a/src/main.less
+++ b/src/main.less
@@ -39,3 +39,12 @@ pre {
   .btn_cursor;
   margin-top: 35vh;
 }
+
+.arrow-right {
+  width: 0; 
+  height: 0; 
+  border-top: 60vh solid transparent;
+  border-bottom: 60vh solid transparent;
+  border-left: 60vh solid #FFC500;
+  position: fixed;
+}
