up git attributes and remove bootstrap as separate file

--- a/src/main.less
+++ b/src/main.less
@@ -1,5 +1,6 @@
 @import (less) "../node_modules/prismjs/themes/prism.css";
 @import (less) "../node_modules/prismjs/themes/prism-solarizedlight.css";
+@import (less) "../node_modules/bootstrap/dist/css/bootstrap.css";
 
 @import "prism-solarized-light-extention.less";
 
