go to css modules

--- a/src/components/Code.css
+++ b/src/components/Code.css
@@ -23,3 +23,22 @@ pre.language_custom {
     padding-right: 0;
   }
 }
+
+pre {
+  display: block;
+  padding: 9.5px;
+  font-size: 13px;
+  line-height: 1.42857143;
+  word-break: break-all;
+  word-wrap: break-word;
+  border: 0;
+}
+
+.editor {
+  margin: 0 0;
+}
+
+.editor-colors {
+  background-color: #002b36;
+  color: #839496;
+}
