--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,3 +1,15 @@
+body {
+  margin: 0;
+}
+
+.btn_cursor {
+  cursor: pointer;
+}
+
+.btn_cursor:disabled {
+    cursor: not-allowed;
+}
+
 .btn_start {
     margin-top: 35vh;
 }
