--- a/src/components/Textarea/Textarea.css
+++ b/src/components/Textarea/Textarea.css
@@ -1,9 +1,11 @@
 .console {
   border: 1px solid #E0E0E0;
-  border-top: 1px solid #000;
+  /*border-top: 1px solid #777;*/
+  border-top: none;
   display: flex;
   width: 100%;
   padding-left: 15px;
+  color: #3c3c3c;
 }
 
 .console_icon {
@@ -11,4 +13,13 @@
   position: absolute;
   margin-top: 1px;
   margin-left: 3px;
+}
+
+.console-label {
+  border: 1px solid #E0E0E0;
+  margin: 0;
+  display: block;
+  color: #505050;
+  background: #f6f6f6;
+  padding-left: 10px;
 }
