--- a/src/components/Grid/Grid.css
+++ b/src/components/Grid/Grid.css
@@ -6,3 +6,13 @@
   grid-column-gap: 15px;
   padding: 0 15px;
 }
+
+.container_mobile-no-padding {
+  padding: 0;
+}
+
+@media (min-width: 768px) {
+  .container_mobile-no-padding {
+    padding: 0 15px;
+  }
+}
