chore: apply prettier

--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -6,7 +6,7 @@
 }
 
 .console-label {
-  border: 1px solid #E0E0E0;
+  border: 1px solid #e0e0e0;
   margin: 0;
   display: block;
   color: #505050;
