--- a/src/components/Textarea/Textarea.css
+++ b/src/components/Textarea/Textarea.css
@@ -1,9 +1,8 @@
 .console {
-  border: 1px solid #E0E0E0;
+  border: 1px solid #e0e0e0;
   border-top: none;
   display: flex;
   width: 100%;
   padding-left: 15px;
   color: #3c3c3c;
 }
-
